# learning-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
csv2json/: cli.py  core.py
csv2json/tests/: conftest.py  test_cli.py  test_cli_error.py  test_convert.py  test_filter.py  test_pretty.py  test_progress.py
